@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* fix compatibility regression introduced in file-5.05 involving MAGIC_NONE.
+
 * handle keyboard interrupts better during compilation; no longer display
   die tracebacks if the user intentionally stopped the compilation.
 
